# assareh-v2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  CLAUDE.md  DECISIONS.md  GLOSSARY.md  LEARNINGS.md  PHASE_A.md  PHASE_B.md  PHASE_C.md  PLAN.md  VISION.md
notebooks/: target_diagnostics.ipynb
scripts/: data_downloader.py  fetch_binance_ohlcv.py
src/assareh/: __init__.py  config.py
src/assareh/data/: __init__.py  integrity.py  loader.py  schemas.py
src/assareh/features/: __init__.py  patr.py
src/assareh/labels/: __init__.py  diagnostics.py  targets.py
src/assareh/splits/: __init__.py  splits.py  weights.py
tests/: __init__.py  conftest.py  test_diagnostics.py  test_integrity.py  test_patr.py  test_splits.py  test_targets.py  test_weights.py
